add different rules within a larger div; add a hover transition and adjust formatting

--- a/derivatives.html
+++ b/derivatives.html
@@ -5,11 +5,37 @@
     <meta charset="UTF-8">
     <title>title</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <!--links to the stylesheet-->
+    <!--imports the fonts from google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
+
 </head>
 
 <body>
-    <div>
-    <h1>Derivatives</h1>
+    <div id="background">
+        <h1>Derivatives</h1>
+        <div id="rules">
+            <div id="rule1">
+                <h3>Power Rule</h3>
+                <p>y = x<sup>n</sup> --> y<sup>'</sup> = nx<sup>x-1</sup></p>
+            </div>
+
+            <div id="rule2">
+                <h3>Product Rule</h3>
+                <p>y<sup>'</sup> = f <sup>'</sup>*g + f*g<sup>'</sup></p>
+            </div>
+
+            <div id="rule3">
+                <h3>Quotient Rule</h3>
+                <p>y<sup>'</sup> = <sup class="frac">(f <sup>'</sup>*g - f *g<sup>' </sup>) </sup>&frasl;<span class="frac"> g<sup>2</sup></span></p>
+            </div>
+
+            <div id="rule4">
+                <h3>Chain Rule</h3>
+                <p>y<sup>'</sup> = f <sup>'</sup>(g(x)) * g<sup>'</sup></p>
+            </div>
+        </div>
     </div>
 </body>
 
