add examples div with power, product, and some of quotient rule examples

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div id="rule2">
                 <h3>Product Rule</h3>
-                <p>y<sup>'</sup> = f <sup>'</sup>*g + f*g<sup>'</sup></p>
+                <p>y<sup>'</sup> = f <sup>'</sup>*g + f *g<sup>'</sup></p>
             </div>
 
             <div id="rule3">
@@ -34,6 +34,27 @@
             <div id="rule4">
                 <h3>Chain Rule</h3>
                 <p>y<sup>'</sup> = f <sup>'</sup>(g(x)) * g<sup>'</sup></p>
+            </div>
+        </div>
+        <div id="examples">
+            <div id="power">
+                <p>y = 3x<sup>5</sup><br>y<sup>'</sup> = 15x<sup>4</sup></p>
+            </div>
+
+            <div id="product">
+                <p>
+                    y = 4x<sup>2</sup> * 5x<sup>3</sup><br> y
+                    <sup>'</sup> = 8x * 5x<sup>3</sup> + 4x<sup>2</sup> * 15x<sup>2</sup><br> y
+                    <sup>'</sup> = 40x<sup>4</sup> + 60x<sup>4</sup><br> y
+                    <sup>'</sup> = 100x<sup>4</sup>
+                </p>
+            </div>
+
+            <div id="quotient">
+                <p>
+                    y = <sup class="frac">(x + 4) </sup>&frasl;<span class="frac"> (2x-5)</span><br>
+                    y<sup>'</sup> = <sup class="frac">(2x-5)(1+0) - (x+4)(2-0) </sup>&frasl;<span class="frac"> (2x-5)<sup>2</sup></span>
+                </p>
             </div>
         </div>
     </div>
